--- a/index.html
+++ b/index.html
@@ -342,21 +342,21 @@
             <iframe  class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248849.8865401048!2d77.49085262352496!3d12.953959987105064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1680775646503!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">"
              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-             <form action="">
+             <form action="http://localhost:8080/coffee" method="post">
                 <h3>get  in touch</h3>
                 <div class="inputbox">
                     <span class="fas fa-user"></span>
-                    <input type="text" placeholder="name">
+                    <input type="text" name="name" placeholder="name">
 
                 </div>
                 <div class="inputbox">
                     <span class="fas fa-envelope"></span>
-                    <input type="email" placeholder="email">
+                    <input type="email" name="email" placeholder="email">
 
                 </div>
                 <div class="inputbox">
                     <span class="fas fa-phone"></span>
-                    <input type="number" placeholder="number">
+                    <input type="number" name="phno" placeholder="number">
 
                 </div>
                 <input type="submit" value="contact now" class="btn">
